Update server command in development doc